# PlumHound

./: .gitignore  BlueHound.py  CNAME  PlumHound.py  PlumHound.pyproj  PlumHound.sln  README.md  _config.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
env/Scripts/: activate  activate.bat
interface/: package-lock.json  package.json
interface/backend/: phApi.py  phBackend.py
interface/frontend/: .gitignore  README.md  package-lock.json  package.json
interface/frontend/public/: index.html
interface/frontend/src/: App.tsx  index.css  types.ts
interface/frontend/src/components/: List.tsx  Table.tsx  TaskContainer.tsx  nav.tsx
interface/frontend/src/components/Tasks/: AnalyzeTask.tsx  BusiestTask.tsx  QueryTask.tsx
interface/public/: index.html
interface/src/: App.tsx
interface/src/components/: nav.tsx
lib/: phCLImanagement.py  phCheckPython.py  phDatabase.py  phDeliver.py  phLoggy.py  phNotifyArgs.py  phTasks.py  phdeliver.py  phtasks.py
modules/: AzHound.py  BlueHound.py  ph_ReportIndexer.py  ph_TaskZipper.py  ph_visualizer.py
phlib/: plumcode.py
reports/: AdminGroups.html  Computers_WithDescriptions.html  DomainUsers.html  GPOs.html  Groups_MostAdminPriviledged.html  Keroastable_Users.html  LocalAdmin_Groups.html  LocalAdmin_Users.html  OUs_Count.html  RDPableGroups.html  Users_Count_DirectAdminComputers.html  Users_NeverActive_Enabled.html  Workstations_UnconstrainedDelegation.html
tasks/: BlueHound.tasks  Certificates.tasks  ConstrainedDelegation.tasks  DCSync.tasks  Defaullt.tasks  DomainUsers.tasks  DomainUsers2.tasks  EntraID-AADConnect.tasks  EntraID-AttackPaths.tasks  EntraID-General.tasks  EntraID-MSGraph.tasks  EntraID-Principals-ManageID.tasks  GPOs.tasks  Kerberoasting.tasks  all.tasks  broken.tasks  default-csv.tasks  default-enabledonly.tasks  default-faster  default.tasks  easy.tasks  hunt.tasks  long.tasks  new.json  new2.json  testing.tasks  visualizations.tasks
template/: head.html  html.css  tail.html
